# epistemic-drift

./: .coderabbitignore  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-local.txt
.adversarial/: config.yml  config.yml.template
.adversarial/docs/: EVALUATION-WORKFLOW.md
.adversarial/scripts/: evaluate_plan.sh  proofread_content.sh  review_implementation.sh  validate_tests.sh
.adversarial/templates/: arch-assess-input-template.md  code-review-input-template.md  spec-compliance-input-template.md
.agent-context/: CI-CHECKER-FIX-REVIEW-STARTER.md  ED-0001-HANDOFF-feature-developer.md  ED-0002-HANDOFF-feature-developer.md  ED-0003-HANDOFF-feature-developer.md  ED-0004-HANDOFF-feature-developer.md  ED-0005-HANDOFF-feature-developer.md  ED-0006-HANDOFF-feature-developer.md  ED-0008-HANDOFF-feature-developer.md  ED-0009-HANDOFF-feature-developer.md  ED-0010-HANDOFF-feature-developer.md  ED-0011-HANDOFF-feature-developer.md  ED-0012-HANDOFF-feature-developer.md  README.md  RELEASE-0.3.0-REVIEW-STARTER.md  REVIEW-INSIGHTS.md  agent-handoffs.json  current-state.json  patterns.yml
.agent-context/retros/: ED-0001-retro.md  ED-0002-retro-ACTIONS.md  ED-0002-retro.md  ED-0003-retro-ACTIONS.md  ED-0003-retro.md  ED-0006-retro-ACTIONS.md  ED-0006-retro.md  ED-0009-retro.md  ED-0011-retro.md  ED-0012-retro.md
.agent-context/templates/: review-starter-template.md  review-template.md
.agent-context/workflows/: ADR-CREATION-WORKFLOW.md  AGENT-CREATION-WORKFLOW.md  COMMIT-PROTOCOL.md  COVERAGE-WORKFLOW.md  EVALUATOR-LIBRARY-WORKFLOW.md  PR-SIZE-WORKFLOW.md  RESEARCH-QUALITY-STANDARDS.md  REVIEW-FIX-WORKFLOW.md  TASK-COMPLETION-PROTOCOL.md  TEST-SUITE-WORKFLOW.md  TESTING-WORKFLOW.md  WORKFLOW-FREEZE-POLICY.md  WORKTREE-MERGE-WORKFLOW.md
.claude/: settings.json
.claude/agents/: AGENT-TEMPLATE.md  OPERATIONAL-RULES.md  TASK-STARTER-TEMPLATE.md  agent-creator.md  bootstrap.md  ci-checker.md  code-reviewer.md  document-reviewer.md  (+9 more)
.dispatch/: bus.jsonl  config.yml
.github/: dependabot.yml
.serena/: .gitignore  project.yml.template  setup-serena.sh
agents/: launch  onboarding  preflight
docs/: LINEAR-SYNC-BEHAVIOR.md  TESTING.md  UPSTREAM-CHANGES-2025-01-28.md
e2e/: accessibility.spec.ts
files/: BLUEPRINT.md  graph.json
scripts/: README.md  __init__.py  bootstrap.sh  check-bots.sh  ci-check.sh  create-agent.sh  gh-review-helper.sh  linear_sync_utils.py  logging_config.py  pattern_lint.py  preflight-check.sh  project  setup-dev.sh  sync_tasks_to_linear.py  validate_task_status.py  verify-ci.sh  verify-setup.sh  wait-for-bots.sh
tests/: conftest.py  test_create_agent.py  test_linear_sync.py  test_logging.py  test_pattern_lint.py  test_project_script.py  test_template.py  test_uv_detection.py
(+143 files in other folders)
