# Project configuration for Epistemic Drift
# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This section has no Python packages yet. Add them when you create your package.
# When you create packages, add them to this section, e.g. packages = ["your_project"].
# Note: we have set this section up this way to prevent auto-discovery of non-Python directories such as agents/, delegation/, etc.
packages = []

[project]
name = "epistemic-drift"
version = "0.1.0"
description = "Interactive concept map exploring how generative AI extends cognition while creating epistemic vulnerabilities"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "broadcaster_three"},
]
dependencies = []

[project.optional-dependencies]
linear = [
    "gql[requests]>=3.4.0",    # GraphQL client for Linear API
    "python-dotenv>=1.0.0",    # Load .env files
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",  # For async test support
    "httpx>=0.25.0",           # For API testing (FastAPI, etc.)
    "black==23.12.1",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
    "adversarial-workflow>=0.7.0",  # Multi-evaluator support, citation verification
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (>1s runtime, deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
    "unit: fast unit tests (default)",
    "requires_gql: tests requiring gql package for Linear API (skip with '-m \"not requires_gql\"')",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E203"]  # Conflicts with black

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
# Source will be added when your package is created
# source = ["your_project"]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    # CLI entry points are hard to unit test - focus coverage on utility modules
    "scripts/sync_tasks_to_linear.py",
    "scripts/validate_task_status.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
